--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -810,6 +810,10 @@ video {
   margin-bottom: 70px;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -1784,6 +1788,11 @@ video {
 .py-\[130px\] {
   padding-top: 130px;
   padding-bottom: 130px;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pt-16 {
