--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1891,6 +1891,14 @@ video {
   padding-top: 90px;
 }
 
+.pt-\[80px\] {
+  padding-top: 80px;
+}
+
+.pt-\[70px\] {
+  padding-top: 70px;
+}
+
 .text-center {
   text-align: center;
 }
