--- a/index.njk
+++ b/index.njk
@@ -195,7 +195,7 @@ layout: layouts/base.njk
           <a href="/works/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
             <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
               <div class="bg-white w-[100%] h-[100%] rounded-full"></div>
-              <img src="https://via.placeholder.com/150" class="absolute top-0 left-0 mt-[5%] ml-[15%] max-w-none w-[150%] h-[150%] group-hover/thumb:ml-[5%] duration-200">
+              <img src="/assets/img/works/sample/sample-thumb.png" class="absolute top-0 left-0 mt-[5%] ml-[15%] max-w-none w-[150%] h-[150%] group-hover/thumb:ml-[5%] duration-200">
             </div>
           </a>
         </li>
