--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -22,9 +22,13 @@ layout: layouts/base.njk
     {# Circle #}
     <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0 gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
-        <div class="bg-red-500 w-[100%] h-[100%] rounded-full"></div>
-        <img src="/assets/img/works/sample/sample-thumb.png" class="absolute top-0 left-0 mt-[5%] ml-[10%] max-w-none w-[150%] h-[150%] gsap-circle-card">
+        <div class="bg-red-800 w-[100%] h-[100%] rounded-full"></div>
+        <div class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] gsap-circle-card">
+          <img src="/assets/img/works/sample/sample-thumb.png" class="w-[100%] h-[100%] translate-x-[8%] translate-y-[5%] duration-200">
+        </div>
       </div>
+
+      
     </div>
 
 
